# geocalcsolution

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  latexmod.sh
program/geocalc/: CMakeLists.txt
program/geocalc/src/: main_geocalc.cpp
program/spml/: CMakeLists.txt
program/spml/include/: compare.h  consts.h  convert.h  geodesy.h  spml.h  units.h
program/spml/src/: convert.cpp  geodesy.cpp  spml.cpp
test/spml/: CMakeLists.txt  test_spml_geodesy.cpp
